Fix issues with top bar height while running vs complete and fix tile height calculation when complete to prevent gap

--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -190,8 +190,3 @@ $date-width: 76px
 $date-margin: 24px
 $section-width: 185px
 $teacher-margin: 10px
-
-//
-// dataflow
-//
-$dataflow-topbar-height: 40px
