--- a/src/dataflow/components/dataflow-program-cover.sass
+++ b/src/dataflow/components/dataflow-program-cover.sass
@@ -1,4 +1,4 @@
-@import ../../components/vars
+@import ../vars
 
 .cover
   position: absolute
@@ -9,6 +9,8 @@
   align-items: center
   justify-content: center
   top: 0px
+  &.running
+    top: $dataflow-topbar-height
   &.full
     width: 100%
 
